cmd/oamd/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: oamd
  labels:
    app: oamd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: oamd
    spec:
      containers:
      - name: oamd
        image: tschokko/oamd:${TAG}
        command:
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: oamd-config
            mountPath: /etc/oamd/
            readOnly: true
          - name: icomcloud-pki
            mountPath: /etc/oamd/ssl/icomcloud-pki
      volumes:
        - name: oamd-config
          configMap: { name: oamd-config }
        - name: icomcloud-pki
          secret:
            secretName: icomcloud-pki
---
kind: Service
apiVersion: v1
metadata:
  name: oamd-svc
spec:
  selector:
    app: oamd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
